<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_5dp">

    <Button
        android:id="@+id/saveIntern"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_55dp"
        android:text="@string/save_intern_memory"
        android:textColor="@color/red" />

    <Button
        android:id="@+id/saveExtern"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_55dp"
        android:layout_below="@+id/saveIntern"
        android:text="@string/save_extern_memory"
        android:textColor="@color/purple" />

    <Button
        android:id="@+id/createDatabase"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_55dp"
        android:layout_below="@id/saveExtern"
        android:text="@string/create_database"
        android:textColor="@color/yellow" />

    <Button
        android:id="@+id/queryDatabase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/createDatabase"
        android:text="@string/query_database"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <EditText
            android:id="@+id/editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:hint="@string/placeholder_hint" />

        <Button
            android:id="@+id/btnOk"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnOk"
            android:textColor="@color/green" />

    </LinearLayout>

</RelativeLayout>